--- a/drivers/usb/Kconfig
+++ b/drivers/usb/Kconfig
@@ -32,6 +32,7 @@ config USB_ARCH_HAS_OHCI
 	default y if CPU_SUBTYPE_SH7763
 	default y if CPU_SUBTYPE_SH7786
 	default y if CPU_SUBTYPE_FLI7610
+	default y if CPU_SUBTYPE_STX7105
 	default y if CPU_SUBTYPE_STX7108
 	default y if MACH_STM_STID127
 	default y if CPU_SUBTYPE_STXH205
@@ -58,6 +59,7 @@ config USB_ARCH_HAS_EHCI
 	default y if MICROBLAZE
 	default y if SPARC_LEON
 	default y if CPU_SUBTYPE_FLI7610
+	default y if CPU_SUBTYPE_STX7105
 	default y if CPU_SUBTYPE_STX7108
 	default y if MACH_STM_STID127
 	default y if CPU_SUBTYPE_STXH205
